fix: alignment of left navigations

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/navigation2.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/navigation2.less
@@ -1,7 +1,9 @@
 .navigation {
   margin: 0 1.25rem;
 }
-
+.cmp-navigation__item-link{
+  margin-left: -18px;
+}
 @media (min-width: 1024px) {
   .navigation {
     margin: 0;
@@ -12,6 +14,7 @@
     .cmp-navigation {
       overflow: auto;
       padding-inline: 1.25rem;
+              margin-left: 10px;
 
       &-filter__wrapper {
         padding-inline: 1.25rem;
